--- a/pelisvhx/index.html
+++ b/pelisvhx/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Federico Malfasi" />
+    <meta name="author" content="vhx" />
     <meta name="description" content="Cartelera de peliculas populares" />
     <meta name="keywords" content="terror, comedia, drama, si-fy" />
     <title>Pelis Vhx | rjs</title>
+    <script type="module" src="/src/main.jsx" defer></script>
     </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    
   </body>
 </html>
