Probando Arreglo Defer

--- a/pelisvhx/index.html
+++ b/pelisvhx/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Cartelera de peliculas populares" />
     <meta name="keywords" content="terror, comedia, drama, si-fy" />
     <title>Pelis Vhx | rjs</title>
-    <script type="module" src="/src/main.jsx" defer></script>
+    <script type="module" src="/src/main.jsx" defer="defer"></script>
     </head>
   <body>
     <div id="root"></div>
