--- a/pelisvhx/index.html
+++ b/pelisvhx/index.html
@@ -8,6 +8,8 @@
     <meta name="description" content="Cartelera de peliculas populares" />
     <meta name="keywords" content="terror, comedia, drama, si-fy" />
     <title>Pelis Vhx | rjs</title>
+    <link rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <script type="module" src="/src/main.jsx" defer></script>
     </head>
   <body>
